--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-node_modules
+# Node modules
+node_modules/
+
+# Build output
+dist/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Optional
+.env
+.DS_Store
+.vscode/
+.idea/
+*.local
